(AngularJS) hero image

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,9 +1,8 @@
 <div class="container-fluid">
+    <div id="hero-img"></div>
     <div id="hero-caption" class="text-center">
         <h3>{{title}}</h3>
         <h5>{{ message }}</h5>
     </div>
-    <!--<div id="hero-img">-->
-    <!--</div>-->
-    <img id="hero-img" class="img-responsive" src="/static/images/hero-01.jpg" alt="hero-img"/>
+    <!--<img id="hero-img" class="img-responsive" src="/static/images/hero-01.jpg" alt="hero-img"/>-->
 </div>
