--- a/src/src/static/app/keys/key-info.html
+++ b/src/src/static/app/keys/key-info.html
@@ -1,16 +1,20 @@
 <div class="btn btn-default">
-    <a ng-href="/key-details/{{key.id}}" class="no-decoration">Details</a>
+    <a ng-href="/key-details/{{key.id}}" class="no-decoration">Pojedinosti</a>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <span>Key ID: {{key.id}}</span>
+        <span><em>{{key.room_repr}}</em> | </span>
+        <span>ID ključa: {{key.id}}</span>
         <span>Tag ID: {{key.tag_id}}</span>
-        <span>Room number: {{key.room_id}}</span>
+        <span>Broj ključa: {{key.room_id}}</span>
+        <span>Kat: {{key.floor}}</span>
+        <span>Oznaka odjela: {{key.sector_name}}</span>
+        <span>Predio zgrade: {{key.block_name}}</span>
         <span></span>
         <div ng-init="key.isSelected = false">
-            <button class="btn btn-primary">Edit</button>
+            <button class="btn btn-primary">Uređivanje</button>
             <button ng-click="key.isSelected=!key.isSelected" class="btn btn-danger">
-                {{ key.isSelected ? 'Deselect' : 'Select' }}
+                {{ key.isSelected ? 'Odoznači' : 'Označi' }}
             </button>
         </div>
     </div>
