--- a/src/src/static/app/search-users/users-results.html
+++ b/src/src/static/app/search-users/users-results.html
@@ -1,14 +1,14 @@
 <div class="container" ng-if="results!=[]">
-    <h3>Search results:</h3>
+    <h3>Rezultati pretrage:</h3>
     <hr/>
     <div>
-        Order users by:
+        Poredati korisnike prema:
         <select ng-model="orderProp" name="orderProp" id="orderProp">
-            <option value="user_id">User ID</option>
+            <option value="user_id">ID korisnika</option>
             <option value="tag_id">Tag ID</option>
-            <option value="role_id">Role</option>
-            <option value="first_name">First name</option>
-            <option value="last_name">Last name</option>
+            <option value="role_id">Titula</option>
+            <option value="first_name">Ime</option>
+            <option value="last_name">Prezime</option>
             <option value="email">Email</option>
         </select>
     </div>
