--- a/src/src/static/app/search-users/users-search-form.html
+++ b/src/src/static/app/search-users/users-search-form.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div>
-        <h3>User Lookup Page</h3>
+        <h3>Stranica za pretragu korisnika</h3>
         <hr/>
     </div>
     <div class="panel panel-primary">
-        <div class="panel-heading">Users search form</div>
+        <div class="panel-heading">Forma za pretragu korisnika</div>
         <div class="panel-body">
-            <h5>Check for users by entering their first name or last name</h5>
+            <h5>Pretražite korisnike unosom imena ili prezimena u polje za pretragu (možete više korisnika odjednom)</h5>
             <div class="form-group">
                 <input ng-model="usersSearch.queryset" type="text" placeholder="Enter search data..."/>
-                <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Search</button>
-                <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
+                <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Pretraži</button>
+                <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Odustani</button>
             </div>
         </div>
     </div>
