--- a/src/src/static/app/register/user-register.html
+++ b/src/src/static/app/register/user-register.html
@@ -4,8 +4,8 @@
         <div class="panel panel-primary">
             <div class="panel-heading">{{note}}</div>
             <div class="panel-body">
-                Please move your ID card to the reader and the system will detect its unique number. The number will be
-                displayed shortly after, and you can enter the rest of information then.
+                Molim, primaknite korisnički RFID privjesak ključa ili karticu iznad čitača kako bi sustav detektirao jedinstveni identifikacijski broj.
+                Identifikacijski broj će se prikazati nedugo nakon i tada ćete moći unijeti ostale korisničke podatke.
             </div>
         </div>
         <div class="panel">
@@ -16,7 +16,7 @@
             <div class="panel-body">{{message}}</div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading">Editing information about person #<span>{{tagData}}</span></div>
+            <div class="panel-heading">Uređivanje podataka o korisniku s brojem <span>{{tagData}}</span></div>
             <div class="panel-body">
                 <div class="form-inline">
                     <div class="form-group">
@@ -25,12 +25,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="fname">First name:</label>
+                        <label for="fname">Ime:</label>
                         <input ng-model="firstName" class="form-control" placeholder="Enter first name"
                                id="fname" type="text" ng-required="true"/>
                     </div>
                     <div class="form-group">
-                        <label for="lname">Last name:</label>
+                        <label for="lname">Prezime:</label>
                         <input ng-model="lastName" class="form-control" placeholder="Enter last name"
                                id="lname" type="text" ng-required="true"/>
                     </div>
@@ -40,32 +40,23 @@
                                id="email" type="email" ng-required="true"/>
                     </div>
                     <div class="form-group">
-                        <label for="role">Role:</label>
+                        <label for="role">Titula:</label>
                         <select ng-required="true" class="form-control" ng-model="role" name="role" id="role">
-                            <option value="1">Professor</option>
+                            <option value="1">Profesor</option>
                             <option value="2">Student</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="file">Profile image:</label>
+                        <label for="file">Slika profila:</label>
                         <input ngf-select="" ngf-drop="" ng-model="image" name="file" id="file" accept="image/*"
                                type="file"/>
                     </div>
-                    <button ng-disabled="isNotValid()" ng-click="register()" class="btn btn-primary">Register
+                    <button ng-disabled="isNotValid()" ng-click="register()" class="btn btn-primary">
+                        Izvrši
                     </button>
-                    <button ng-click="cancel()" class="btn btn-danger">Cancel</button>
+                    <button ng-click="cancel()" class="btn btn-danger">Odustani</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!--<div class="container">-->
-<!--<div ng-show="!image"-->
-<!--class="container drop-box drop-box-container"-->
-<!--ngf-change="readImageFile(file)"-->
-<!--ng-model="file"-->
-<!--ngf-drop="" ngf-select=""-->
-<!--ngf-accept="image/*" accept="image/*">-->
-<!--<span>Drop image or click to upload profile photo</span>-->
-<!--</div>-->
-<!--</div>-->
