--- a/src/src/static/app/users/users.html
+++ b/src/src/static/app/users/users.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
-    <h3>Users registered</h3>
+    <h3>Registrirani korisnici</h3>
     <hr/>
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <button ng-click="users.deleteSelected()" class="btn btn-danger">Delete selected</button>
+                <button ng-click="users.deleteSelected()" class="btn btn-danger">Obriši odabrane</button>
             </div>
         </div>
         <div>
-            Order users by:
+            Poredati korisnike prema:
             <select ng-model="users.orderProp" name="orderProp" id="orderProp">
-                <option value="user_id">User ID</option>
+                <option value="user_id">ID korisnika</option>
                 <option value="tag_id">Tag ID</option>
-                <option value="role_id">Role</option>
-                <option value="first_name">First name</option>
-                <option value="last_name">Last name</option>
+                <option value="role_id">Titula</option>
+                <option value="first_name">Ime</option>
+                <option value="last_name">Prezime</option>
                 <option value="email">Email</option>
             </select>
         </div>
