(AngularJS & Flask) Added actions for downloading excel template and importing seed data to server

--- a/src/src/static/app/search-users/users-search-form.html
+++ b/src/src/static/app/search-users/users-search-form.html
@@ -8,7 +8,7 @@
         <div class="panel-body">
             <h5>Pretražite korisnike unosom imena ili prezimena u polje za pretragu (možete više korisnika odjednom)</h5>
             <div class="form-group">
-                <input ng-model="usersSearch.queryset" type="text" placeholder="Enter search data..."/>
+                <input ng-model="usersSearch.queryset" ng-keypress="usersSearch.doSubmit($event)" type="text" placeholder="Enter search data..."/>
                 <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Pretraži</button>
                 <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Odustani</button>
             </div>
