--- a/src/src/static/app/search-keys/keys-search-form.html
+++ b/src/src/static/app/search-keys/keys-search-form.html
@@ -8,7 +8,7 @@
         <div class="panel-body">
             <h5>Pretražite ključeve unosom pune oznake prostorije (npr. BI1-22) ili oznake RFID tokena (tag ID)</h5>
             <div class="form-group">
-                <input ng-model="keysSearch.queryset" placeholder="Enter tag or room ID..." type="text"/>
+                <input ng-model="keysSearch.queryset" ng-keypress="keysSearch.doSubmit($event)" placeholder="Enter tag or room ID..." type="text"/>
                 <button ng-click="keysSearch.submit()" type="submit" class="btn btn-primary">Pretraži</button>
                 <button ng-click="keysSearch.cancel()" type="reset" class="btn btn-default">Odustani</button>
             </div>
