(AngularJS) scripts in index.html

--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -63,6 +63,9 @@
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
     <script src="static/app/register/user-register.controller.js"></script>
+
+    <script src="static/app/keys-seed/keys-seed.controller.js"></script>
+    <script src="static/app/template-download/template-download.directive.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <nav-bar></nav-bar>
