--- a/src/src/static/app/keys/keys.html
+++ b/src/src/static/app/keys/keys.html
@@ -5,6 +5,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <button ng-click="keys.deleteSelected()" class="btn btn-danger">Obriši odabrane</button>
+                <button ng-href="/keys/seed" class="btn btn-info">Uvoz ključeva</button>
             </div>
         </div>
         <div>
