(AngularJS) keys seed page

--- a/src/src/static/app/keys-seed/keys-seed.html
+++ b/src/src/static/app/keys-seed/keys-seed.html
@@ -1,36 +1,44 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        Grupni unos podataka za ključeve (unos kolekcije ključeva)
-    </div>
-    <div class="panel-body">
-        <div template-download></div>
-        <div>
-            <label for="download-alt">Preuzmi ako link poviše ne radi:</label>
-            <button ng-click="keysSeed.getTemplate()" id="download-alt" name="download-alt" class="btn btn-default">
-                Preuzmi
-            </button>
+<div class="container">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            Grupni unos podataka za ključeve (unos kolekcije ključeva)
         </div>
-        <div>
-            <p>Prenesite ispunjen predložak za unos ključeva.
-                Ispunite predložak sa kolekcijom ključeva, zatim prenesite u polje za prijenos datoteke.</p>
-        </div>
-        <div>
-            <label for="file">Datoteka:</label>
-            <input ng-model="keysSeed.seed"
-                   ngf-select=""
-                   ngf-drop=""
-                   ngf-pattern="'.xls'"
-                   name="file" id="file"
-                   accept=".xls"
-                   type="file"/>
-            <button ng-click="keysSeed.send()" class="btn btn-primary">Izvrši</button>
-            <button ng-click="keysSeed.cancel()" class="btn btn-danger">Odustani</button>
-        </div>
-        <div ng-if="keysSeed.file" class="progress">
-            <div class="progress-bar" role="progressbar"
-                 aria-valuenow="{{ keysSeed.progressPercentage }}" aria-valuemin="0" aria-valuemax="100"
-                 style="width: 60%;">
-                {{ keysSeed.progressPercentage }}
+        <div class="panel-body">
+            <div template-download></div>
+            <div>
+                <label for="download-alt">Preuzmi ako link poviše ne radi:</label>
+                <button ng-click="keysSeed.getTemplate()" id="download-alt" name="download-alt" class="btn btn-default">
+                    Preuzmi
+                </button>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Prenesite ispunjen predložak za unos ključeva.
+                    Ispunite predložak sa kolekcijom ključeva, zatim prenesite u polje za prijenos datoteke.
+                </div>
+                <div class="panel-body">
+                    <div>
+                        <label for="file">Datoteka:</label>
+                        <input ng-model="keysSeed.seed"
+                               ngf-select=""
+                               ngf-drop=""
+                               ngf-pattern="'.xls'"
+                               name="file" id="file"
+                               accept=".xls"
+                               type="file"/>
+                    </div>
+                    <div ng-if="keysSeed.file" class="progress">
+                        <div class="progress-bar" role="progressbar"
+                             aria-valuenow="{{ keysSeed.progressPercentage }}" aria-valuemin="0" aria-valuemax="100"
+                             style="width: 60%;">
+                            {{ keysSeed.progressPercentage }}
+                        </div>
+                    </div>
+                    <div>
+                        <button ng-click="keysSeed.send()" class="btn btn-primary">Izvrši</button>
+                        <button ng-click="keysSeed.cancel()" class="btn btn-danger">Odustani</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
