--- a/src/src/static/app/template-download/template-download.html
+++ b/src/src/static/app/template-download/template-download.html
@@ -3,6 +3,6 @@
         <h5>Preuzmite excel predložak za unos svih ključeva.</h5>
     </div>
     <div class="panel-body">
-        <a href="/api/data/template">Download excel template</a>
+        <a ng-href="/api/data/template">Download excel template</a>
     </div>
 </div>
