--- a/src/src/static/app/users/users.html
+++ b/src/src/static/app/users/users.html
@@ -1,6 +1,8 @@
-<div class="container-fluid">
-    <h3>Registrirani korisnici</h3>
-    <hr/>
+<div class="container">
+    <div>
+        <h3>Registrirani korisnici</h3>
+        <hr/>
+    </div>
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
