(Flask) global name os - storage manager

--- a/src/src/static/app/keys-seed/keys-seed.html
+++ b/src/src/static/app/keys-seed/keys-seed.html
@@ -1,4 +1,8 @@
 <div class="container">
+    <div>
+        <h3>Stranica za uvoz podataka o ključevima prostorija</h3>
+        <hr/>
+    </div>
     <div class="panel panel-primary">
         <div class="panel-heading">
             Grupni unos podataka za ključeve (unos kolekcije ključeva)
@@ -27,7 +31,7 @@
                                type="file"/>
                     </div>
                     <div>
-                        <button ng-click="keysSeed.send()" class="btn btn-primary">Izvrši</button>
+                        <button ng-click="keysSeed.send()" class="btn btn-primary">Prenesi</button>
                         <button ng-click="keysSeed.cancel()" class="btn btn-danger">Odustani</button>
                     </div>
                 </div>
