(Flask) added favicon

--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Index</title>
 
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
     <link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css"/>
     <link rel="stylesheet" href="static/css/site.css"/>
