--- a/src/src/static/app/keys/key-info.html
+++ b/src/src/static/app/keys/key-info.html
@@ -3,14 +3,13 @@
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <span><em>{{key.room_repr}}</em> | </span>
-        <span>ID ključa: {{key.id}}</span>
-        <span>Tag ID: {{key.tag_id}}</span>
-        <span>Broj ključa: {{key.room_id}}</span>
-        <span>Kat: {{key.floor}}</span>
-        <span>Oznaka odjela: {{key.sector_name}}</span>
-        <span>Predio zgrade: {{key.block_name}}</span>
-        <span></span>
+        <div class="well-sm"><em>{{key.room_repr}}</em></div>
+        <div class="well-sm">ID ključa: {{key.id}}</div>
+        <div class="well-sm">Tag ID: {{key.tag_id}}</div>
+        <div class="well-sm">Broj ključa: {{key.room_id}}</div>
+        <div class="well-sm">Kat: {{key.floor}}</div>
+        <div class="well-sm">Oznaka odjela: {{key.sector_name}}</div>
+        <div class="well-sm">Predio zgrade: {{key.block_name}}</div>
         <div ng-init="key.isSelected = false">
             <button class="btn btn-primary">Uređivanje</button>
             <button ng-click="key.isSelected=!key.isSelected" class="btn btn-danger">
