(AngularJS) styling user info directive

--- a/src/src/static/app/user-details/user-details.html
+++ b/src/src/static/app/user-details/user-details.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div ng-if="userData!=null">
-            <div user-info="userData"></div>
+            <div class="row" user-info="userData"></div>
             <div user-sessions user="userId"></div>
         </div>
         <div ng-if="!userData">
