(AngularJS) user data wells and reader script with try-except

--- a/src/src/static/app/users/user-info.html
+++ b/src/src/static/app/users/user-info.html
@@ -17,17 +17,17 @@
                 </div>
                 <div class="inline-field border-left padding-left">
                     <div class="padding-right-sm">
-                        <div class="well-sm">
+                        <div class="well">
                             {{user.first_name}} {{user.last_name}}
                         </div>
                     </div>
                     <div class="padding-right-sm">
-                        <div class="well-sm">
+                        <div class="well">
                             <i>{{user.email}}</i>
                         </div>
                     </div>
                     <div class="padding-right-sm">
-                        <div class="well-sm">
+                        <div class="well">
                             {{user.tag_id}}
                         </div>
                     </div>
