(AngularJS) removed inner container from user-info

--- a/src/src/static/app/users/user-info.html
+++ b/src/src/static/app/users/user-info.html
@@ -1,5 +1,5 @@
-<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-    <div ng-init="user.isSelected=false" class="container">
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div ng-init="user.isSelected=false">
         <div class="btn btn-default inline-field">
             <a class="no-decoration" ng-href="/user-details/{{user.user_id}}">Pojedinosti</a>
         </div>
