(AngularJS & Flask) user and key edit features

--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -50,7 +50,7 @@
                         <label for="rid">Broj prostorije:</label>
                         <input ng-model="roomId" class="form-control" id="rid"
                                placeholder="Enter room number..." type="text"/>
-                        <button ng-click="register()" class="btn btn-primary">Izvrši</button>
+                        <button ng-click="proceed()" class="btn btn-primary">Izvrši</button>
                         <button ng-click="cancel()" class="btn btn-danger">Odustani</button>
                     </div>
                 </div>
