--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -51,7 +51,7 @@
                         <input ngf-select="" ngf-drop="" ng-model="image" name="file" id="file" accept="image/*"
                                type="file"/>
                     </div>
-                    <button ng-disabled="isNotValid()" ng-click="register()" class="btn btn-primary">
+                    <button ng-disabled="isNotValid()" ng-click="proceed()" class="btn btn-primary">
                         Izvrši
                     </button>
                     <button ng-click="cancel()" class="btn btn-danger">Odustani</button>
