--- a/src/src/static/app/users/user-info.html
+++ b/src/src/static/app/users/user-info.html
@@ -1,11 +1,14 @@
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
     <div ng-init="user.isSelected=false">
         <div class="btn btn-default inline-field">
-            <a class="no-decoration" ng-href="/user-details/{{user.user_id}}">Pojedinosti</a>
+            <a ng-href="/user-details/{{user.user_id}}" class="no-decoration">Pojedinosti</a>
         </div>
         <button ng-click="user.isSelected=!user.isSelected" class="btn btn-danger">
             {{ user.isSelected ? 'Odoznači' : 'Označi' }}
         </button>
+        <div class="btn btn-default inline-field">
+            <a ng-href="/users/edit/{{ user.user_id }}" class="no-decoration">Edit</a>
+        </div>
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4>Broj korisnika: {{user.user_id}}</h4>
