--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -65,6 +65,10 @@
     <script src="static/app/register/key-register.controller.js"></script>
     <script src="static/app/register/user-register.controller.js"></script>
 
+    <script src="static/app/edits/update.service.js"></script>
+    <script src="static/app/edits/key-edit.controller.js"></script>
+    <script src="static/app/edits/user-edit.controller.js"></script>
+
     <script src="static/app/keys-seed/keys-seed.controller.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
