--- a/src/src/static/app/keys/key-info.html
+++ b/src/src/static/app/keys/key-info.html
@@ -11,7 +11,7 @@
         <div class="well-sm inline-field">Tag ID: {{key.tag_id}}</div>
         <div class="well-sm inline-field">ID ključa: {{key.id}}</div>
         <div ng-init="key.isSelected = false">
-            <a ng-href="/users/edit/{{ key.id }}" class="btn btn-primary">Uređivanje</a>
+            <a ng-href="/keys/edit/{{ key.id }}" class="btn btn-primary">Uređivanje</a>
             <button ng-click="key.isSelected=!key.isSelected" class="btn btn-danger">
                 {{ key.isSelected ? 'Odoznači' : 'Označi' }}
             </button>
