--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -8,7 +8,7 @@
                 Identifikacijski broj će se prikazati nedugo nakon i tada ćete moći unijeti ostale korisničke podatke.
             </div>
         </div>
-        <div class="panel">
+        <div ng-if="!isPreloading" class="panel">
             <div reader tag-data="tagData" message="message"></div>
         </div>
         <div class="panel panel-info">
