--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -41,15 +41,18 @@
                     </div>
                     <div class="form-group">
                         <label for="role">Titula:</label>
-                        <select ng-required="true" class="form-control" ng-model="role" name="role" id="role">
-                            <option value="1">Profesor</option>
-                            <option value="2">Student</option>
+                        <select ng-model="role" ng-required="true"
+                                ng-options="selectedRole.id as selectedRole.name for selectedRole in roleOptions"
+                                class="form-control" name="role" id="role">
+                            <!--<option value="1">Profesor</option>-->
+                            <!--<option value="2">Student</option>-->
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="file">Slika profila:</label>
-                        <input ngf-select="" ngf-drop="" ng-model="image" name="file" id="file" accept="image/*"
-                               type="file"/>
+                        <input ngf-select="" ngf-drop="" ng-model="image"
+                               name="file" id="file"
+                               accept="image/*" type="file"/>
                     </div>
                     <button ng-disabled="isNotValid()" ng-click="proceed()" class="btn btn-primary">
                         Izvrši
