--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -19,9 +19,9 @@
             <div class="panel-heading">Uređivanje podataka vezanih za ključ broj {{tagData}}</div>
             <div class="panel-body">
                 <div ng-init="isRoom=true">
-                    <input ng-model="isRoom" placeholder="Enter room number..." type="checkbox"/>
+                    <input ng-model="isRoom" type="checkbox"/>
                     Učionica
-                    <input ng-model="!isRoom" placeholder="Enter room number..." type="checkbox"/>
+                    <input ng-model="!isRoom" type="checkbox"/>
                     Amfiteatar
                 </div>
                 <div class="form-inline">
